modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -126,11 +126,11 @@
         </div>
     </div>
 </main>
-<script crossorigin = "anonymous" src = "./js/ostrale23-umfrage.js" ></script >
+<script crossorigin = "anonymous" src = "./js/ostrale23-umfrage.js" type = "module" ></script >
 <script type = "application/javascript" >
     function call_startSurveyDE() {
 
-        console.log('o23survey: ' + window.o23survey);
+        console.log('o23survey: ' + o23survey);
         /*import {json} from '/js/ostrale023-umfrage_json.js';
         window.ostrale_survey_locale = 'de';
         const survey = new Survey.Model(json);
