--- a/html5/index.html
+++ b/html5/index.html
@@ -10,43 +10,46 @@
     <meta name="author" content="Th.Haupt">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          crossorigin="anonymous"/>
+          crossorigin = "anonymous" />
     <!-- Bootstrap Font Icon CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-          crossorigin="anonymous"/>
+    <link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+          crossorigin = "anonymous" />
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-          crossorigin="anonymous"/>
+    <link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+          crossorigin = "anonymous" />
     <!-- JQuery JS
     <script ASYNC src="https://unpkg.com/jquery@3.6.4/dist/jquery.min.js" crossorigin="anonymous"></script>
     -->
-    <script ASYNC crossorigin = "anonymous" src = "./js/jquery.min.js" type = "javascript" ></script >
-    <!--
-    <script src = "https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js" type = "module" ></script >-->
+    <script ASYNC crossorigin = "anonymous" src = "./js/jquery-3.7.0.min.js" ></script >
+
+    <script src = "https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js" type = "module" ></script >
     <!-- SurveyJS Theme CSS -->
     <!--<link href="https://unpkg.com/survey-jquery/modern.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous"/>-->
-    <link rel="stylesheet" href="https://unpkg.com/survey-jquery/defaultV2.min.css" crossorigin="anonymous"/>
+    <link rel = "stylesheet" href = "https://unpkg.com/survey-jquery/defaultV2.min.css" crossorigin = "anonymous" />
     <!--<link rel="stylesheet" href="./css/normalize.min.css" crossorigin="anonymous" />-->
     <!-- Apply the Bootstrap theme -->
 
-    <link rel="stylesheet" href="./css/styles.css" crossorigin="anonymous"/>
-    <link rel="icon" type="image/vnd.icon" href="./images/favicon.ico"/>
-    <script ASYNC src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            crossorigin="anonymous"></script>
-    <!--
-    <script type="module" ASYNC src="https://unpkg.com/survey-core/survey.i18n.min.js" crossorigin="anonymous"></script>
-    <script type="module" ASYNC src="https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js"
-            crossorigin="anonymous"></script>
-            -->
-    <!--
-    <script src="./js/ostrale023-umfrage_json.js" crossorigin="anonymous"></script>
-    <script async src="./js/ostrale23-umfrage.js" crossorigin="anonymous"></script>-->
+    <link rel = "stylesheet" href = "./css/styles.css" crossorigin = "anonymous" />
+    <link rel = "icon" type = "image/vnd.icon" href = "./images/favicon.ico" />
+    <script ASYNC src = "https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            crossorigin = "anonymous" ></script >
+
+    <script ASYNC crossorigin = "anonymous" src = "https://unpkg.com/survey-core/survey.i18n.min.js" type = "javascript" ></script >
+    <script ASYNC src = "https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js" type = "javascript"
+            crossorigin = "anonymous" ></script >
+
+
+    <script src = "./js/ostrale023-umfrage_json.js" crossorigin = "anonymous" ></script >
+    <!--<script async src="./js/ostrale23-umfrage.js" crossorigin="anonymous"></script>-->
     <script crossorigin = "anonymous" src = "./js/scripts.js" type = "module" ></script >
-    <title>Umfrage zur Ostrale Biennale O23</title>
-</head>
+    <title >Umfrage zur Ostrale Biennale O23</title >
+</head >
 <body id="page">
 <header class="d-none">
 </header>
+<script type = "javascript" >
+    const o23survey = new survey.Model(json);
+</script >
 <main>
     <div class="container-fluid"
          style="/*background-image:url('./images/robotron-kantine_893x664px_96dpi.png');
