--- a/html5/index.html
+++ b/html5/index.html
@@ -20,9 +20,9 @@
     <!-- JQuery JS
     <script ASYNC src="https://unpkg.com/jquery@3.6.4/dist/jquery.min.js" crossorigin="anonymous"></script>
     -->
-    <script ASYNC crossorigin = "anonymous" src = "./js/jquery-3.7.0.min.js" ></script >
+    <script ASYNC crossorigin = "anonymous" src = "./js/jquery-3.7.0.min.js" type = "text/javascript" ></script >
 
-    <script src = "https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js" type = "module" ></script >
+    <script src = "https://unpkg.com/survey-jquery@1.9.92/survey.jquery.min.js" type = "text/javascript" ></script >
     <!-- SurveyJS Theme CSS -->
     <!--<link href="https://unpkg.com/survey-jquery/modern.min.css" type="text/css" rel="stylesheet" crossorigin="anonymous"/>-->
     <link rel = "stylesheet" href = "https://unpkg.com/survey-jquery/defaultV2.min.css" crossorigin = "anonymous" />
@@ -39,7 +39,7 @@
             crossorigin = "anonymous" ></script >
 
 
-    <script src = "./js/ostrale023-umfrage_json.js" crossorigin = "anonymous" ></script >
+    <script crossorigin = "anonymous" src = "./js/ostrale023-umfrage_json.js" type = "text/javascript" ></script >
     <!--<script async src="./js/ostrale23-umfrage.js" crossorigin="anonymous"></script>-->
     <script crossorigin = "anonymous" src = "./js/scripts.js" type = "module" ></script >
     <title >Umfrage zur Ostrale Biennale O23</title >
@@ -47,7 +47,7 @@
 <body id="page">
 <header class="d-none">
 </header>
-<script type = "javascript" >
+<script type = "text/javascript" >
     const o23survey = new survey.Model(json);
 </script >
 <main>
@@ -130,7 +130,7 @@
     </div>
 </main>
 <script crossorigin = "anonymous" src = "./js/ostrale23-umfrage.js" type = "module" ></script >
-<script type = "application/javascript" >
+<script type = "text/javascript" >
     function call_startSurveyDE() {
 
         console.log('o23survey: ' + o23survey);
