--- a/html5/index.html
+++ b/html5/index.html
@@ -48,7 +48,7 @@
 <header class="d-none">
 </header>
 <script type = "text/javascript" >
-    const o23survey = new survey.Model(json);
+    const survey = new survey.Model(json);
 </script >
 <main>
     <div class="container-fluid"
@@ -129,16 +129,16 @@
         </div>
     </div>
 </main>
-<script crossorigin = "anonymous" src = "./js/ostrale23-umfrage.js" type = "module" ></script >
+<script crossorigin = "anonymous" src = "./js/ostrale23-umfrage.js" type = "text/javascript" ></script >
 <script type = "text/javascript" >
     function call_startSurveyDE() {
 
-        console.log('o23survey: ' + o23survey);
+        console.log('o23survey: ' + survey);
         /*import {json} from '/js/ostrale023-umfrage_json.js';
         window.ostrale_survey_locale = 'de';
         const survey = new Survey.Model(json);
         $("#surveyElement").survey({model: survey, locale: 'de'});*/
-        $("#surveyElement").Survey({model: o23survey, locale: 'de'});
+        $("#surveyElement").Survey({model: survey, locale: 'de'});
         o23survey.locale = 'de';
         console.log('document.locale: ' + window.ostrale_survey_locale);
         console.log('survey.locale: ' + o23survey.locale);
@@ -148,8 +148,8 @@
         window.ostrale_survey_locale = 'en';
 
 
-        $("#surveyElement").Survey({model: window.o23survey, locale: 'en'});
-        o23survey.locale = 'en';
+        $("#surveyElement").Survey({model: survey, locale: 'en'});
+        survey.locale = 'en';
         console.log('document.locale: ' + window.ostrale_survey_locale);
         console.log('survey.locale: ' + o23survey.locale);
     };
