modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -129,7 +129,7 @@
         </div>
     </div>
 </main>
-<script crossorigin = "anonymous" src = "./js/ostrale23-umfrage.js" type = "text/javascript" ></script >
+<!--<script crossorigin = "anonymous" src = "./js/ostrale23-umfrage.js" type = "text/javascript" ></script >-->
 <script type = "text/javascript" >
     function call_startSurveyDE() {
         const survey = new survey.Model(json);
