--- a/html5/index.html
+++ b/html5/index.html
@@ -132,7 +132,7 @@
 <!--<script crossorigin = "anonymous" src = "./js/ostrale23-umfrage.js" type = "text/javascript" ></script >-->
 <script type = "text/javascript" >
     function call_startSurveyDE() {
-        let ostralesurvey = new survey.Model(json);
+        let ostralesurvey = new Survey.Model(json);
         console.log('o23survey: ' + ostralesurvey);
         /*import {json} from '/js/ostrale023-umfrage_json.js';
         window.ostrale_survey_locale = 'de';
@@ -146,7 +146,7 @@
     }
 
     function call_startSurveyEN() {
-        let survey = new survey.Model(json);
+        let survey = new Survey.Model(json);
 
         survey.locale = 'en';
         $("#surveyElement").Survey({model: survey, locale: 'en'});
