--- a/html5/index.html
+++ b/html5/index.html
@@ -35,12 +35,12 @@
             crossorigin = "anonymous" ></script >
 
     <script ASYNC crossorigin = "anonymous" src = "https://unpkg.com/survey-core/survey.i18n.min.js" type = "javascript" ></script >
+    <!--
     <script ASYNC src = "https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js" type = "javascript"
             crossorigin = "anonymous" ></script >
+    -->
 
 
-    <script crossorigin = "anonymous" src = "./js/ostrale023-umfrage_json.js" type = "text/javascript" ></script >
-    <!--<script async src="./js/ostrale23-umfrage.js" crossorigin="anonymous"></script>-->
     <script crossorigin = "anonymous" src = "./js/scripts.js" type = "module" ></script >
     <title >Umfrage zur Ostrale Biennale O23</title >
 </head >
@@ -178,15 +178,44 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                <div id="surveyElement" style="display: inline-flex;">
-                    <survey params="survey: model"></survey>
-                    <survey params="survey.defaultLocale: en"></survey>
-                    <survey params="survey.locale: de"></survey>
-                </div>
-            </div>
+            <div class = "modal-body" >
+                <div id = "surveyElement" style = "display: inline-flex;" >
+                    <survey params = "survey: model" ></survey >
+                    <survey params = "survey.defaultLocale: en" ></survey >
+                    <survey params = "survey.locale: de" ></survey >
+                </div >
+                <script crossorigin = "anonymous" src = "./js/ostrale023-umfrage_json.js" ></script >
+                <script crossorigin = "anonymous" src = "./js/ostrale23-umfrage.js" ></script >
+            </div >
         </div>
     </div>
 </div>
+<div aria-hidden = "true" aria-labelledby = "my-modal-en-title" class = "modal fade" id = "my-modal-en" role = "dialog"
+     tabindex = "-1" >
+    <div class = "modal-dialog modal-xl modal-dialog-centered" role = "document" >
+        <div class = "modal-content" >
+            <div class = "modal-header" >
+                <h5 class = "modal-title d-none" id = "my-modal-en-title" >Umfrage / Survey</h5 >
+                <button aria-label = "Zur&uml;ck / Back" class = "btn carousel-control-prev-icon" data-bs-previous = "true"
+                        data-bs-target = "#emy-modal" disabled >
+                    <span aria-hidden = "true" ><i class = "fas fa-creative-commons fa-icons fa-arrow-circle-left" ></i >&#8656;</span >
+                </button >
+                <button aria-label = "Close" class = "btn close" data-bs-dismiss = "modal" data-bs-target = "#my-modal"
+                        data-bs-toggle = "modal" >
+                    <span aria-hidden = "true" >&times;</span >
+                </button >
+            </div >
+            <div class = "modal-body" >
+                <div id = "surveyElementEN" style = "display: inline-flex;" >
+                    <survey params = "survey: model" ></survey >
+                    <survey params = "survey.defaultLocale: en" ></survey >
+                    <survey params = "survey.locale: en" ></survey >
+                </div >
+                <script crossorigin = "anonymous" src = "./js/ostrale023-umfrage_json.js" ></script >
+                <script crossorigin = "anonymous" src = "./js/ostrale23-umfrage-en.js" ></script >
+            </div >
+        </div >
+    </div >
+</div >
 </body>
 </html>
