modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -89,7 +89,7 @@
                                     <div class="d-flex col align-self-center start-50 align-bottom">
                                         <a class = "btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow"
                                            data-bs-locale = "de" data-bs-target = "#my-modal" data-bs-toggle = "modal"
-                                           onclick = "call_startSurveyDE();"
+
                                            id = "BtnDE" role = "button" >Starte
                                                                          Umfrage</a >
                                     </div>
@@ -116,8 +116,8 @@
                                 <div class="row align-items-center align-bottom">
                                     <div class="d-flex col align-self-center start-50 align-bottom">
                                         <a class = "btn btn-danger btn-lg btn-xxl shadow text-white display-3 rounded-3"
-                                           data-bs-locale = "en" data-bs-target = "#my-modal" data-bs-toggle = "modal"
-                                           onclick = "window.call_startSurveyEN();"
+                                           data-bs-locale = "en" data-bs-target = "#my-modal-en" data-bs-toggle =
+                                                   "modal"
                                            id = "BtnEN" role = "button" >Start the survey</a >
                                     </div>
                                 </div>
