--- a/html5/index.html
+++ b/html5/index.html
@@ -18,9 +18,9 @@
     <link rel = "stylesheet" href = "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           crossorigin = "anonymous" />
     <!-- JQuery JS
-    <script ASYNC src="https://unpkg.com/jquery@3.6.4/dist/jquery.min.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/jquery@3.6.4/dist/jquery.min.js" crossorigin="anonymous"></script>
     -->
-    <script ASYNC crossorigin = "anonymous" src = "./js/jquery-3.7.0.min.js" type = "text/javascript" ></script >
+    <script crossorigin = "anonymous" src = "./js/jquery-3.7.0.min.js" type = "text/javascript" ></script >
 
     <script src = "https://unpkg.com/survey-jquery@1.9.95/survey.jquery.min.js" ></script >
     <link href = "https://unpkg.com/survey-jquery@1.9.95/defaultV2.min.css" rel = "stylesheet" />
@@ -31,12 +31,11 @@
 
     <link rel = "stylesheet" href = "./css/styles.css" crossorigin = "anonymous" />
     <link rel = "icon" type = "image/vnd.icon" href = "./images/favicon.ico" />
-    <script ASYNC src = "https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    <script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             crossorigin = "anonymous" ></script >
 
-    <script ASYNC crossorigin = "anonymous" src = "https://unpkg.com/survey-core/survey.i18n.min.js" type = "javascript" ></script >
-    <!--
-    <script ASYNC src = "https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js" type = "javascript"
+    <script crossorigin = "anonymous" src = "https://unpkg.com/survey-core/survey.i18n.min.js" type = "javascript" ></script >
+    <!--    <script src = "https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js" type = "javascript"
             crossorigin = "anonymous" ></script >
     -->
 
