modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -168,10 +168,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title d-none" id="my-modal-title">Umfrage / Survey</h5>
-                <button class="btn carousel-control-prev-icon" disabled data-bs-target="#emy-modal"
-                        data-bs-previous="true" aria-label="Zur&uml;ck / Back">
-                    <span aria-hidden="true"><i class="fas fa-creative-commons fa-icons fa-arrow-circle-left"></i>&#8656;</span>
-                </button>
+                <button class = "btn carousel-control-prev-icon" data-bs-target = "#my-modal" disabled
+                        data-bs-previous = "true" aria-label = "Zur&uml;ck / Back" >
+                    <span aria-hidden = "true" ><i class = "fas fa-creative-commons fa-icons fa-arrow-circle-left" ></i >&#8656;</span >
+                </button >
                 <button class="btn close" data-bs-target="#my-modal" data-bs-toggle="modal" data-bs-dismiss="modal"
                         aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -196,10 +196,11 @@
             <div class = "modal-header" >
                 <h5 class = "modal-title d-none" id = "my-modal-en-title" >Umfrage / Survey</h5 >
                 <button aria-label = "Zur&uml;ck / Back" class = "btn carousel-control-prev-icon" data-bs-previous = "true"
-                        data-bs-target = "#emy-modal" disabled >
+                        data-bs-target = "#my-modal-en" disabled >
                     <span aria-hidden = "true" ><i class = "fas fa-creative-commons fa-icons fa-arrow-circle-left" ></i >&#8656;</span >
                 </button >
-                <button aria-label = "Close" class = "btn close" data-bs-dismiss = "modal" data-bs-target = "#my-modal"
+                <button aria-label = "Close" class = "btn close" data-bs-dismiss = "modal" data-bs-target =
+                        "#my-modal-en"
                         data-bs-toggle = "modal" >
                     <span aria-hidden = "true" >&times;</span >
                 </button >
@@ -210,7 +211,6 @@
                     <survey params = "survey.defaultLocale: en" ></survey >
                     <survey params = "survey.locale: en" ></survey >
                 </div >
-                <script crossorigin = "anonymous" src = "./js/ostrale023-umfrage_json.js" ></script >
                 <script crossorigin = "anonymous" src = "./js/ostrale23-umfrage-en.js" ></script >
             </div >
         </div >
