modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -34,7 +34,13 @@
     <script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             crossorigin = "anonymous" ></script >
 
-    <script crossorigin = "anonymous" src = "https://unpkg.com/survey-core/survey.i18n.min.js" type = "javascript" ></script >
+
+    <script src = "https://unpkg.com/survey-jquery@1.9.95/bootstrap.bundle.min.js" ></script >
+    <script src = "https://unpkg.com/survey-jquery@1.9.95/js/bootstrap-integration.min.js" ></script >
+    <script src = "https://unpkg.com/browse/survey-core@1.9.95/survey.core.js" ></script >
+    <script src = "https://unpkg.com/browse/survey-core@1.9.95/survey.i18n.min.js" ></script >
+    <script src = "https://unpkg.com/survey-core@1.9.95/plugins/bootstrap-integration.min.js" type = "javascript"
+    ></script >
     <!--    <script src = "https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js" type = "javascript"
             crossorigin = "anonymous" ></script >
     -->
