modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -173,7 +173,7 @@
     <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title d-none" id="my-modal-title">Umfrage / Survey</h5>
+                <h5 class = "modal-title d-none" id = "my-modal-title" >Umfrage zur Biennale O23</h5 >
                 <button class = "btn carousel-control-prev-icon" data-bs-target = "#my-modal" disabled
                         data-bs-previous = "true" aria-label = "Zur&uml;ck / Back" >
                     <span aria-hidden = "true" ><i class = "fas fa-creative-commons fa-icons fa-arrow-circle-left" ></i >&#8656;</span >
@@ -200,7 +200,7 @@
     <div class = "modal-dialog modal-xl modal-dialog-centered" role = "document" >
         <div class = "modal-content" >
             <div class = "modal-header" >
-                <h5 class = "modal-title d-none" id = "my-modal-en-title" >Umfrage / Survey</h5 >
+                <h5 class = "modal-title d-none" id = "my-modal-en-title" >Survey in part of biennal O23</h5 >
                 <button aria-label = "Zur&uml;ck / Back" class = "btn carousel-control-prev-icon" data-bs-previous = "true"
                         data-bs-target = "#my-modal-en" disabled >
                     <span aria-hidden = "true" ><i class = "fas fa-creative-commons fa-icons fa-arrow-circle-left" ></i >&#8656;</span >
