--- a/html5/index.html
+++ b/html5/index.html
@@ -35,11 +35,12 @@
             crossorigin = "anonymous" ></script >
 
 
-    <script src = "https://unpkg.com/survey-jquery@1.9.95/bootstrap.bundle.min.js" ></script >
-    <script src = "https://unpkg.com/survey-jquery@1.9.95/js/bootstrap-integration.min.js" ></script >
-    <script src = "https://unpkg.com/browse/survey-core@1.9.95/survey.core.js" ></script >
-    <script src = "https://unpkg.com/browse/survey-core@1.9.95/survey.i18n.min.js" ></script >
-    <script src = "https://unpkg.com/survey-core@1.9.95/plugins/bootstrap-integration.min.js" type = "javascript"
+    <script crossorigin = "anonymous" src = "https://unpkg.com/survey-jquery@1.9.95/bootstrap.bundle.min.js" ></script >
+    <script crossorigin = "anonymous" src = "https://unpkg.com/survey-jquery@1.9.95/js/bootstrap-integration.min.js" ></script >
+    <script crossorigin = "anonymous" src = "https://unpkg.com/browse/survey-core@1.9.95/survey.core.js" ></script >
+    <script crossorigin = "anonymous" src = "https://unpkg.com/browse/survey-core@1.9.95/survey.i18n.min.js"
+    ></script >
+    <script crossorigin = "anonymous" src = "https://unpkg.com/survey-core@1.9.95/plugins/bootstrap-integration.min.js"
     ></script >
     <!--    <script src = "https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js" type = "javascript"
             crossorigin = "anonymous" ></script >
