--- a/html5/index.html
+++ b/html5/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="de" translate="no" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<base href = "/" />
 <head>
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
@@ -20,7 +22,7 @@
     <!-- JQuery JS
     <script src="https://unpkg.com/jquery@3.6.4/dist/jquery.min.js" crossorigin="anonymous"></script>
     -->
-    <script crossorigin = "anonymous" src = "./js/jquery-3.7.0.min.js" type = "text/javascript" ></script >
+    <script crossorigin = "anonymous" src = "./js/jquery-3.7.0.min.js" type = "application/javascript" ></script >
 
     <script src = "https://unpkg.com/survey-jquery@1.9.95/survey.jquery.min.js" ></script >
     <link href = "https://unpkg.com/survey-jquery@1.9.95/defaultV2.min.css" rel = "stylesheet" />
@@ -36,12 +38,12 @@
 
 
     <script crossorigin = "anonymous" src = "https://unpkg.com/survey-jquery@1.9.95/bootstrap.bundle.min.js"
-            type = "text/javascript" ></script >
-    <script crossorigin = "anonymous" src = "https://unpkg.com/survey-jquery@1.9.95/js/bootstrap-integration.min.js" type = "text/javascript" ></script >
-    <script crossorigin = "anonymous" src = "https://unpkg.com/browse/survey-core@1.9.95/survey.core.js" type = "text/javascript" ></script >
-    <script crossorigin = "anonymous" src = "https://unpkg.com/browse/survey-core@1.9.95/survey.i18n.min.js" type = "text/javascript"
+            type = "application/javascript" ></script >
+    <script crossorigin = "anonymous" src = "https://unpkg.com/survey-jquery@1.9.95/js/bootstrap-integration.min.js" type = "application/javascript" ></script >
+    <script crossorigin = "anonymous" src = "https://unpkg.com/browse/survey-core@1.9.95/survey.core.js" type = "application/javascript" ></script >
+    <script crossorigin = "anonymous" src = "https://unpkg.com/browse/survey-core@1.9.95/survey.i18n.min.js" type = "application/javascript"
     ></script >
-    <script crossorigin = "anonymous" src = "https://unpkg.com/survey-core@1.9.95/plugins/bootstrap-integration.min.js" type = "text/javascript"
+    <script crossorigin = "anonymous" src = "https://unpkg.com/survey-core@1.9.95/plugins/bootstrap-integration.min.js" type = "application/javascript"
     ></script >
     <!--    <script src = "https://unpkg.com/survey-core/plugins/bootstrap-integration.min.js" type = "javascript"
             crossorigin = "anonymous" ></script >
@@ -54,7 +56,7 @@
 <body id="page">
 <header class="d-none">
 </header>
-<script type = "text/javascript" >
+<script type = "application/javascript" >
 
 </script >
 <main>
@@ -126,18 +128,18 @@
                                            data-bs-locale = "en" data-bs-target = "#my-modal-en" data-bs-toggle =
                                                    "modal"
                                            id = "BtnEN" role = "button" >Start the survey</a >
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
-<!--<script crossorigin = "anonymous" src = "./js/ostrale23-umfrage.js" type = "text/javascript" ></script >-->
-<script type = "text/javascript" >
+                                    </div >
+                                </div >
+                            </div >
+                        </div >
+                    </div >
+                </div >
+            </div >
+        </div >
+    </div >
+</main >
+<!--<script crossorigin = "anonymous" src = "./js/ostrale23-umfrage.js" type = "application/javascript" ></script >-->
+<script type = "application/javascript" >
     function call_startSurveyDE() {
         let ostralesurvey = new Survey.Model(json);
         console.log('o23survey: ' + ostralesurvey);
