modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -188,7 +188,7 @@
                 </button>
             </div>
             <div class = "modal-body" >
-                <div id = "surveyElement" style = "display: inline-flex;" >
+                <div id = "surveyElement" style = "/*display: inline-flex;*/" >
                     <survey params = "survey: model" ></survey >
                     <survey params = "survey.defaultLocale: en" ></survey >
                     <survey params = "survey.locale: de" ></survey >
@@ -216,7 +216,7 @@
                 </button >
             </div >
             <div class = "modal-body" >
-                <div id = "surveyElementEN" style = "display: inline-flex;" >
+                <div id = "surveyElementEN" style = "/*display: inline-flex;*/" >
                     <survey params = "survey: model" ></survey >
                     <survey params = "survey.defaultLocale: en" ></survey >
                     <survey params = "survey.locale: en" ></survey >
