--- a/html5/index.html
+++ b/html5/index.html
@@ -50,7 +50,7 @@
 
 
     <script crossorigin = "anonymous" src = "./js/scripts.js" type = "module" ></script >
-    <link rel = "stylesheet" href = "./css/styles.css" crossorigin = "anonymous" />
+    <link href="./css/styles.css" rel = "stylesheet" type="text/css" />
     <title >Umfrage zur Ostrale Biennale O23</title >
 </head >
 <body id="page">
