--- a/html5/index.html
+++ b/html5/index.html
@@ -174,7 +174,7 @@
 <footer class="d-none">© Ostrale 2023 | All Rights Reserved | Version: 2.0.10-stable // @fehlercode42</footer>
 
 <div id="my-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="my-modal-title" aria-hidden="true">
-    <div class="modal-dialog modal-fullscreen modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class = "modal-title d-none" id = "my-modal-title" >Umfrage zur Biennale O23</h5 >
@@ -201,7 +201,7 @@
 </div>
 <div aria-hidden = "true" aria-labelledby = "my-modal-en-title" class = "modal fade" id = "my-modal-en" role = "dialog"
      tabindex = "-1" >
-    <div class = "modal-dialog modal-fullscreen modal-dialog-centered" role = "document" >
+    <div class = "modal-dialog modal-xl modal-dialog-centered" role = "document" >
         <div class = "modal-content" >
             <div class = "modal-header" >
                 <h5 class = "modal-title d-none" id = "my-modal-en-title" >Survey in part of biennal O23</h5 >
