--- a/html5/index.html
+++ b/html5/index.html
@@ -49,8 +49,8 @@
     -->
 
 
-    <script crossorigin = "anonymous" src = "./js/scripts.js" type = "module" ></script >
-    <link href="./css/styles.css" rel = "stylesheet" type="text/css" />
+    <script crossorigin = "anonymous" src = "./js/scripts.js" ></script >
+    <link href="./css/styles.css" rel = "stylesheet" type="text/css" crossorigin = "anonymous" />
     <title >Umfrage zur Ostrale Biennale O23</title >
 </head >
 <body id="page">
