changed: styles.css, index.html

--- a/html5/index.html
+++ b/html5/index.html
@@ -180,7 +180,7 @@
                 <h5 class = "modal-title d-none" id = "my-modal-title" >Umfrage zur Biennale O23</h5 >
                 <button class = "btn carousel-control-prev-icon" data-bs-target = "#my-modal" disabled
                         data-bs-previous = "true" aria-label = "Zur&uml;ck / Back" >
-                    <span aria-hidden = "true" ><i class = "fas fa-creative-commons fa-icons fa-arrow-circle-left" ></i >&#8656;</span >
+                    <span aria-hidden = "true" ><i class = "bi bi-arrow-left-square" ></i ></span >
                 </button >
                 <button class="btn close" data-bs-target="#my-modal" data-bs-toggle="modal" data-bs-dismiss="modal"
                         aria-label="Close">
@@ -207,7 +207,7 @@
                 <h5 class = "modal-title d-none" id = "my-modal-en-title" >Survey in part of biennal O23</h5 >
                 <button aria-label = "Zur&uml;ck / Back" class = "btn carousel-control-prev-icon" data-bs-previous = "true"
                         data-bs-target = "#my-modal-en" disabled >
-                    <span aria-hidden = "true" ><i class = "fas fa-creative-commons fa-icons fa-arrow-circle-left" ></i >&#8656;</span >
+                    <span aria-hidden = "true" ><i class = "bi bi-arrow-left-square" ></i ></span >
                 </button >
                 <button aria-label = "Close" class = "btn close" data-bs-dismiss = "modal" data-bs-target =
                         "#my-modal-en"
