modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -83,17 +83,22 @@
                         <div class="rahmen col inline-block rounded-3 shadow-lg"
                              style="padding: 2rem;border: 4px solid red;background-color: white;opacity: 0.8;">
                             <div class="row">
-                                <div class="col">
-                                    <h2 class="bold ms-auto">Nimm teil an der Umfrage zur Biennale <span class="ostrale"
-                                                                                                         style="">O</span>23!
-                                    </h2>
-                                    <br>
-                                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-                                        vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-                                        no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                                    </br>
-                                </div>
+                                <div class = "col" >
+                                    <h2 class = "bold ms-auto" >Nimm teil an der Umfrage zur Biennale
+                                        <span class = "ostrale"
+                                              style = "" >O</span >23!
+                                    </h2 >
+                                    <br >
+                                    <p >Diese Umfrage dient dazu, Informationen über unsere Besucher zu erfragen. Auf
+                                        dieser Basis nehmen wir eine Bewertung dieser Interessen im Bezug auf
+                                        zukünftige <span class = "ostrale" >O</span >strale Biennale Ausstellungen und
+                                        deren mögliche Verbesserungen vor. </br>
+                                        Dabei interessieren uns dieses Jahr Fragen nach Herkunftsgebiet, Anreise,
+                                        Präferenzen beim Catering und wie Sie von der Ausstellung erfahren haben.
+                                        </br>
+                                        Ihre Angaben werden vertraulich behandelt und dienen ausschließlich internen
+                                        Zwecken. Bitte helfen Sie mit und beteiligen sich an der Umfrage.</p >
+                                </div >
                                 <div class="row align-items-center align-bottom">
                                     <div class="d-flex col align-self-center start-50 align-bottom">
                                         <a class = "btn btn-lg btn-danger btn-xxl text-white display-3 rounded-3 shadow"
@@ -111,17 +116,20 @@
                         <div class="rahmen col end inline-block rounded-3 shadow-lg"
                              style="border: 4px solid red;padding: 2rem;background-color:white;opacity: 0.8;">
                             <div class="row">
-                                <div class="col">
-                                    <h2 class="bold ms-auto">Take part in the survey about the biennial <span
-                                            class="ostrale" style="">O</span>23!
-                                    </h2>
+                                <div class = "col" >
+                                    <h2 class = "bold ms-auto" >Take part in the survey about the biennial <span
+                                            class = "ostrale" style = "" >O</span >23!
+                                    </h2 >
                                     </br>
-                                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At
-                                        vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-                                        no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                                    </br>
-                                </div>
+                                    <p >The purpose of this survey is to ask for information about our visitors. On
+                                        this basis, we make an assessment of these interests in relation to future
+                                        <span class = "ostrale" >O</span >strale Biennale exhibitions and their possible
+                                        improvements.</br>
+                                        This year we are interested in questions about the area of origin, travel,
+                                        catering preferences and how you found out about the exhibition.</br>
+                                        Your information will be treated confidentially and will only be used for
+                                        internal purposes. Please help and participate in the survey</p >
+                                </div >
                                 <div class="row align-items-center align-bottom">
                                     <div class="d-flex col align-self-center start-50 align-bottom">
                                         <a class = "btn btn-danger btn-lg btn-xxl shadow text-white display-3 rounded-3"
