neue fuelltexte startpage

--- a/html5/index.html
+++ b/html5/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="de" translate="no" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<html lang = "de" translate = "no" xmlns = "http://www.w3.org/1999/html" xmlns = "http://www.w3.org/1999/html" xmlns = "http://www.w3.org/1999/html" >
 <base href = "/" />
-<head>
-    <meta charset="UTF-8">
+<head >
+    <meta charset = "UTF-8" >
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="mobile-web-app-capable" content="yes"/>
-    <meta name="google" content="notranslate">
-    <meta name="description" content="Umfrage zur Ostrale Biennale O23">
-    <meta name="author" content="Th.Haupt">
+    <meta name = "viewport" content = "width=device-width, initial-scale=1" >
+    <meta name = "apple-mobile-web-app-capable" content = "yes" />
+    <meta name = "mobile-web-app-capable" content = "yes" />
+    <meta name = "google" content = "notranslate" >
+    <meta name = "description" content = "Umfrage zur Ostrale Biennale O23" >
+    <meta name = "author" content = "Th.Haupt" >
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           crossorigin = "anonymous" />
@@ -93,11 +93,13 @@
                                         dieser Basis nehmen wir eine Bewertung dieser Interessen im Bezug auf
                                         zukünftige <span class = "ostrale" >O</span >strale Biennale Ausstellungen und
                                         deren mögliche Verbesserungen vor. </br>
-                                        Dabei interessieren uns dieses Jahr Fragen nach Herkunftsgebiet, Anreise,
+                                        Dabei interessieren Fragen nach Herkunftsgebiet, Anreise,
                                         Präferenzen beim Catering und wie Sie von der Ausstellung erfahren haben.
                                         </br>
                                         Ihre Angaben werden vertraulich behandelt und dienen ausschließlich internen
-                                        Zwecken. Bitte helfen Sie mit und beteiligen sich an der Umfrage.</p >
+                                        Zwecken. </br>Bitte helfen Sie mit und beteiligen sich an der Umfrage.</p >
+                                    </br>
+                                    </br>
                                 </div >
                                 <div class="row align-items-center align-bottom">
                                     <div class="d-flex col align-self-center start-50 align-bottom">
@@ -121,14 +123,16 @@
                                             class = "ostrale" style = "" >O</span >23!
                                     </h2 >
                                     </br>
-                                    <p >The purpose of this survey is to ask for information about our visitors. On
+                                    <p >The purpose of this survey is to ask for information about our visitors. </br>On
                                         this basis, we make an assessment of these interests in relation to future
                                         <span class = "ostrale" >O</span >strale Biennale exhibitions and their possible
                                         improvements.</br>
                                         This year we are interested in questions about the area of origin, travel,
                                         catering preferences and how you found out about the exhibition.</br>
                                         Your information will be treated confidentially and will only be used for
-                                        internal purposes. Please help and participate in the survey</p >
+                                        internal purposes. </br>Please help and participate in the survey</p >
+                                    </br>
+                                    </br>
                                 </div >
                                 <div class="row align-items-center align-bottom">
                                     <div class="d-flex col align-self-center start-50 align-bottom">
