anpassungen fuelltexte startpage

--- a/html5/index.html
+++ b/html5/index.html
@@ -96,8 +96,8 @@
                                         Dabei interessieren Fragen nach Herkunftsgebiet, Anreise,
                                         Präferenzen beim Catering und wie Sie von der Ausstellung erfahren haben.
                                         </br>
-                                        Ihre Angaben werden vertraulich behandelt und dienen ausschließlich internen
-                                        Zwecken. </br>Bitte helfen Sie mit und beteiligen sich an der Umfrage.</p >
+                                        Ihre Angaben werden anonym behandelt und dienen ausschließlich internen
+                                        Zwecken.</p >
                                     </br>
                                     </br>
                                 </div >
@@ -130,8 +130,7 @@
                                         This year we are interested in questions about the area of origin, travel,
                                         catering preferences and how you found out about the exhibition.</br>
                                         Your information will be treated confidentially and will only be used for
-                                        internal purposes. </br>Please help and participate in the survey</p >
-                                    </br>
+                                        internal purposes.</p >
                                     </br>
                                 </div >
                                 <div class="row align-items-center align-bottom">
